force-app/main/default/objects/Lead/Lead.object-meta.xml
<CustomObject>
    <compactLayoutAssignments>
        <fullName>SYSTEM</fullName>
        <compactLayoutName>Lead Compact Layout</compactLayoutName>
    </compactLayoutAssignments>
    <fields>
        <fullName>Address</fullName>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>AnnualRevenue</fullName>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City</fullName>
        <type>Text</type>
        <length>40</length>
    </fields>
    <fields>
        <fullName>Company</fullName>
        <required>true</required>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>ConvertedAccountId</fullName>
        <type>Reference</type>
        <referenceTo>Account</referenceTo>
    </fields>
    <fields>
        <fullName>ConvertedContactId</fullName>
        <type>Reference</type>
        <referenceTo>Contact</referenceTo>
    </fields>
    <fields>
        <fullName>ConvertedDate</fullName>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConvertedOpportunityId</fullName>
        <type>Reference</type>
        <referenceTo>Opportunity</referenceTo>
    </fields>
    <fields>
        <fullName>Country</fullName>
        <type>Text</type>
        <length>40</length>
    </fields>
    <fields>
        <fullName>CreatedDate</fullName>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description</fullName>
        <type>TextArea</type>
        <length>32000</length>
    </fields>
    <fields>
        <fullName>Email</fullName>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmailBouncedDate</fullName>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailBouncedReason</fullName>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Fax</fullName>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FirstName</fullName>
        <type>Text</type>
        <length>20</length>
    </fields>
    <fields>
        <fullName>Industry</fullName>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Chemical</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Machinery</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Nonprofits</fullName>
                </value>
                <value>
                    <fullName>Not For Profit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pharmaceuticals</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsConverted</fullName>
        <defaultValue>false</defaultValue>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted</fullName>
        <defaultValue>false</defaultValue>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUnreadByOwner</fullName>
        <defaultValue>false</defaultValue>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastActivityDate</fullName>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate</fullName>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModifiedById</fullName>
        <type>Lookup</type>
        <referenceTo>User</referenceTo>
    </fields>
    <fields>
        <fullName>LastName</fullName>
        <required>true</required>
        <type>Text</type>
        <length>80</length>
    </fields>
    <fields>
        <fullName>LeadSource</fullName>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>External Referral</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Seminar - Internal</fullName>
                </value>
                <value>
                    <fullName>Seminar - Partner</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MobilePhone</fullName>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name</fullName>
        <type>Text</type>
        <length>121</length>
    </fields>
    <fields>
        <fullName>NumberOfEmployees</fullName>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>OwnerId</fullName>
        <type>Lookup</type>
        <referenceTo>User</referenceTo>
    </fields>
    <fields>
        <fullName>Phone</fullName>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PhotoUrl</fullName>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PostalCode</fullName>
        <type>Text</type>
        <length>20</length>
    </fields>
    <fields>
        <fullName>Rating</fullName>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cold</fullName>
                </value>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordTypeId</fullName>
        <type>Lookup</type>
        <referenceTo>RecordType</referenceTo>
    </fields>
    <fields>
        <fullName>SalutationCode</fullName>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State</fullName>
        <type>Text</type>
        <length>40</length>
    </fields>
    <fields>
        <fullName>Street</fullName>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>SystemModstamp</fullName>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title</fullName>
        <type>Text</type>
        <length>128</length>
    </fields>
    <fields>
        <fullName>Website</fullName>
        <type>Url</type>
    </fields>
    <label>Lead</label>
    <namedFilters>
        <fullName>AllOpenLeads</fullName>
        <active>true</active>
        <description>All open leads</description>
        <filterSource>AllOpenLeads</filterSource>
    </namedFilters>
    <namedFilters>
        <fullName>AllOpenLeadsUnderMe</fullName>
        <active>true</active>
        <description>All open leads under me</description>
        <filterSource>AllOpenLeadsUnderMe</filterSource>
    </namedFilters>
    <namedFilters>
        <fullName>LeadsUnderMe</fullName>
        <active>true</active>
        <description>All leads under me</description>
        <filterSource>LeadsUnderMe</filterSource>
    </namedFilters>
    <namedFilters>
        <fullName>MyUnconvertedLeads</fullName>
        <active>true</active>
        <description>My unconverted leads</description>
        <filterSource>MyUnconvertedLeads</filterSource>
    </namedFilters>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>