force-app/main/default/objects/Lead/fields/Ad_Interactions__c.field-meta.xml
<CustomField>
    <fullName>Ad_Interactions__c</fullName>
    <description>Incremental counter to record # of documented advertisement interactions.</description>
    <label>Ad Interactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>