force-app/main/default/objects/Lead/fields/Are_you_from_consulting_firm__c.field-meta.xml
<CustomField>
    <fullName>Are_you_from_consulting_firm__c</fullName>
    <label>Are you from consulting firm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>