force-app/main/default/objects/Lead/fields/Attrib_Last_Age__c.field-meta.xml
<CustomField>
    <fullName>Attrib_Last_Age__c</fullName>
    <formula>if(isblank(Attrib_Last_Date__c), 365,

Today() - Attrib_Last_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attrib Last Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>