force-app/main/default/objects/Lead/fields/Attrib_Last_Date__c.field-meta.xml
<CustomField>
    <fullName>Attrib_Last_Date__c</fullName>
    <label>Attrib Last Date</label>
    <type>Date</type>
</CustomField>