force-app/main/default/objects/Lead/fields/Attrib_Multiples__c.field-meta.xml
<CustomField>
    <fullName>Attrib_Multiples__c</fullName>
    <formula>Attrib_First_Date__c != Attrib_Last_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attrib Multiples</label>
    <type>Checkbox</type>
</CustomField>