force-app/main/default/objects/Lead/fields/Best_Sequence_Owner__c.field-meta.xml
<CustomField>
    <fullName>Best_Sequence_Owner__c</fullName>
    <formula>if(isblank(  Outreach_Owner__c ),
if(isblank( Current_Sequence_Owner__c ),
if(isblank(  Owner:User.LastName ),
 Owner:Queue.QueueName ,
 Owner:User.FirstName + &quot; &quot; +  Owner:User.LastName),
Current_Sequence_Owner__c ),
 Outreach_Owner__r.FirstName  + &quot; &quot; + Outreach_Owner__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Best Sequence Owner</label>
    <type>Text</type>
</CustomField>