force-app/main/default/objects/Lead/fields/Best_X_Factor__c.field-meta.xml
<CustomField>
    <fullName>Best_X_Factor__c</fullName>
    <label>Best X-Factor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X_Factor</valueSetName>
    </valueSet>
</CustomField>