force-app/main/default/objects/Lead/fields/Best_X_Factor_Date__c.field-meta.xml
<CustomField>
    <fullName>Best_X_Factor_Date__c</fullName>
    <label>Best X-Factor Date</label>
    <type>Date</type>
</CustomField>