force-app/main/default/objects/Lead/fields/Calls_Opt_Out_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Calls_Opt_Out_Outreach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calls Opt Out</label>
    <type>Checkbox</type>
</CustomField>