force-app/main/default/objects/Lead/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaigns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>