force-app/main/default/objects/Lead/fields/Competitor_others__c.field-meta.xml
<CustomField>
    <fullName>Competitor_others__c</fullName>
    <inlineHelpText>If you selected &apos;Other&apos; under Competitors. Please fill in a value.</inlineHelpText>
    <label>Competitor(others)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>