force-app/main/default/objects/Lead/fields/Current_Sequence_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_Owner__c</fullName>
    <label>Current Sequence Owner</label>
    <length>80</length>
    <type>Text</type>
</CustomField>