force-app/main/default/objects/Lead/fields/Customer_found_us_here__c.field-meta.xml
<CustomField>
    <fullName>Customer_found_us_here__c</fullName>
    <label>Customer found us here</label>
    <type>TextArea</type>
</CustomField>