force-app/main/default/objects/Lead/fields/Date_1_Working__c.field-meta.xml
<CustomField>
    <fullName>Date_1_Working__c</fullName>
    <label>Date 1 - Working</label>
    <type>Date</type>
</CustomField>