force-app/main/default/objects/Lead/fields/Date_2_Engaging__c.field-meta.xml
<CustomField>
    <fullName>Date_2_Engaging__c</fullName>
    <label>Date 2 - Engaging</label>
    <type>Date</type>
</CustomField>