force-app/main/default/objects/Lead/fields/Date_3_Meeting_Set__c.field-meta.xml
<CustomField>
    <fullName>Date_3_Meeting_Set__c</fullName>
    <label>Date 3 - Meeting Set</label>
    <type>Date</type>
</CustomField>