force-app/main/default/objects/Lead/fields/Date_4_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Date_4_Qualified__c</fullName>
    <formula>ConvertedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date 4 - Qualified</label>
    <type>Date</type>
</CustomField>