force-app/main/default/objects/Lead/fields/Date_5_DQ__c.field-meta.xml
<CustomField>
    <fullName>Date_5_DQ__c</fullName>
    <label>Date 5 - DQ</label>
    <type>Date</type>
</CustomField>