force-app/main/default/objects/Lead/fields/Date_6_Nurture__c.field-meta.xml
<CustomField>
    <fullName>Date_6_Nurture__c</fullName>
    <label>Date 6 - Nurture</label>
    <type>Date</type>
</CustomField>