force-app/main/default/objects/Lead/fields/Deal_Reg_Convert_to_Opp__c.field-meta.xml
<CustomField>
    <fullName>Deal_Reg_Convert_to_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Reg - Convert to Opp</label>
    <type>Checkbox</type>
</CustomField>