force-app/main/default/objects/Lead/fields/Deal_Reg_Referring_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Deal_Reg_Referring_Rep_Name__c</fullName>
    <label>Deal Reg - Referring Rep Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>