force-app/main/default/objects/Lead/fields/Deal_Reg_Referring_Rep_Phone__c.field-meta.xml
<CustomField>
    <fullName>Deal_Reg_Referring_Rep_Phone__c</fullName>
    <label>Deal Reg - Referring Rep Phone</label>
    <type>Phone</type>
</CustomField>