force-app/main/default/objects/Lead/fields/demo_reason__c.field-meta.xml
<CustomField>
    <fullName>demo_reason__c</fullName>
    <label>What would you like to see in Opsera?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End-to-end visibility from ideation to delivery</fullName>
            </value>
            <value>
                <fullName>Salesforce DevOps solution</fullName>
            </value>
            <value>
                <fullName>Shift left security</fullName>
            </value>
            <value>
                <fullName>Pipeline automation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>