force-app/main/default/objects/Lead/fields/Developer_team_size__c.field-meta.xml
<CustomField>
    <fullName>Developer_team_size__c</fullName>
    <inlineHelpText>Pleas select how many developers they have on staff.</inlineHelpText>
    <label>Developer Team Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;5</fullName>
                <default>true</default>
                <label>&lt;5</label>
            </value>
            <value>
                <fullName>5-24</fullName>
            </value>
            <value>
                <fullName>25-99</fullName>
            </value>
            <value>
                <fullName>100-499</fullName>
            </value>
            <value>
                <fullName>500+</fullName>
            </value>
            <value>
                <fullName>11-20</fullName>
                <isActive>false</isActive>
                <label>11-20</label>
            </value>
            <value>
                <fullName>21-50</fullName>
                <isActive>false</isActive>
                <label>21-50</label>
            </value>
            <value>
                <fullName>5-10</fullName>
                <isActive>false</isActive>
                <label>5-10</label>
            </value>
            <value>
                <fullName>&gt;50</fullName>
                <isActive>false</isActive>
                <label>&gt;50</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>