force-app/main/default/objects/Lead/fields/Enrich__c.field-meta.xml
<CustomField>
    <fullName>Enrich__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to enrich this data</description>
    <label>Enrich</label>
    <type>Checkbox</type>
</CustomField>