force-app/main/default/objects/Lead/fields/Enrich_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrich_Date__c</fullName>
    <label>Enrich_Date</label>
    <type>Date</type>
</CustomField>