force-app/main/default/objects/Lead/fields/Enrich_Success__c.field-meta.xml
<CustomField>
    <fullName>Enrich_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrich_Success</label>
    <type>Checkbox</type>
</CustomField>