force-app/main/default/objects/Lead/fields/Fit_Score_Agentic_DevOps_02_19_2026__c.field-meta.xml
<CustomField>
    <fullName>Fit_Score_Agentic_DevOps_02_19_2026__c</fullName>
    <description>A fit score designed to score prospects for the Agentic DevOps product.</description>
    <label>Fit Score Agentic DevOps (02/19/2026)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>