force-app/main/default/objects/Lead/fields/Inactive_Owner__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Owner__c</fullName>
    <formula>and(not(Owner:User.IsActive), isblank(Owner:Queue.Id))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive Owner</label>
    <type>Checkbox</type>
</CustomField>