force-app/main/default/objects/Lead/fields/Intent_Based_Date__c.field-meta.xml
<CustomField>
    <fullName>Intent_Based_Date__c</fullName>
    <formula>Znu_Matched_Account__r.Intent_Based_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intent Based Date</label>
    <type>Date</type>
</CustomField>