force-app/main/default/objects/Lead/fields/Intent_Based_Products__c.field-meta.xml
<CustomField>
    <fullName>Intent_Based_Products__c</fullName>
    <formula>Znu_Matched_Account__r.Intent_Products__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intent Based Products</label>
    <type>Text</type>
</CustomField>