force-app/main/default/objects/Lead/fields/Intent_Score_2026__c.field-meta.xml
<CustomField>
    <fullName>Intent_Score_2026__c</fullName>
    <formula>Znu_Matched_Account__r.Intent_Score_2026__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intent Score 2026</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>