force-app/main/default/objects/Lead/fields/ISLead__c.field-meta.xml
<CustomField>
    <fullName>ISLead__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsLead</label>
    <type>Checkbox</type>
</CustomField>