force-app/main/default/objects/Lead/fields/Lantern_Details__c.field-meta.xml
<CustomField>
    <fullName>Lantern_Details__c</fullName>
    <label>Lantern Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>