force-app/main/default/objects/Lead/fields/Lead_Owner_is_Active__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_is_Active__c</fullName>
    <description>Formula to pull in whether the lead owner is active or not</description>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner is Active</label>
    <type>Checkbox</type>
</CustomField>