force-app/main/default/objects/Lead/fields/Lead_Owner_Over_Ride__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Over_Ride__c</fullName>
    <label>Lead Owner Over Ride</label>
    <length>80</length>
    <type>Text</type>
</CustomField>