force-app/main/default/objects/Lead/fields/Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail__c</fullName>
    <description>Detail of the associated lead source</description>
    <label>Lead Source Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>