force-app/main/default/objects/Lead/fields/Lead_Source_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Notes__c</fullName>
    <description>Captures notes about the lead source for tracking and analysis purposes</description>
    <label>Lead Source Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>