force-app/main/default/objects/Lead/fields/Level_of_Intent__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Intent__c</fullName>
    <description>This is a quick way to determine if the MQL is High Intent or Low Intent based on their Intent Score. Can be used for prioritization of follow-ups and reporting. Managed by a HubSpot Workflow.</description>
    <label>Level of Intent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Intent</fullName>
            </value>
            <value>
                <fullName>Low Intent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>