force-app/main/default/objects/Lead/fields/Lifetime_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Won_Opportunities__c</fullName>
    <description>Check lifetime won opportunities on matched account to see if they are a customer.</description>
    <formula>Znu_Matched_Account__r.Lifetime_Won_Opportunities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lifetime Won Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>