force-app/main/default/objects/Lead/fields/Load_Date__c.field-meta.xml
<CustomField>
    <fullName>Load_Date__c</fullName>
    <description>Last List Load Date</description>
    <label>Load Date</label>
    <type>Date</type>
</CustomField>