force-app/main/default/objects/Lead/fields/Load_Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Load_Lead_Source_Detail__c</fullName>
    <label>Load Lead Source Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>